added bitcoin-cli-cmd to config file, renamed some classes, moved function

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -1,8 +1,8 @@
 [BLOCKCHAIN]
 blockchain_source = blockr
-port = 8331
-rpcport = 18331
+#options: blockr, json-rpc, regtest 
 network = testnet
+bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
 host = irc.freenode.net
