sync_wallet() with bitcoind

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -1,5 +1,5 @@
 [BLOCKCHAIN]
-blockchain_source = blockr
+blockchain_source = json-rpc
 #options: blockr, json-rpc, regtest 
 network = testnet
 bitcoin_cli_cmd = bitcoin-cli
