wrote -walletnotify code for add_tx_notify() method

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -1,5 +1,5 @@
 [BLOCKCHAIN]
-blockchain_source = json-rpc
+blockchain_source = blockr
 #options: blockr, json-rpc, regtest 
 network = testnet
 bitcoin_cli_cmd = bitcoin-cli
