--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -5,7 +5,7 @@ network = testnet
 bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
-host = irc.freenode.net
+host = chat.freenode.net
 channel = joinmarket-pit-test
-port = 6667
+port = 6697
 #More stuff to come
