check for 'usessl = true' in .cfg file and use ssl if applicable

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -8,4 +8,5 @@ bitcoin_cli_cmd = bitcoin-cli
 host = chat.freenode.net
 channel = joinmarket-pit-test
 port = 6697
+usessl = true
 #More stuff to come
