moved pit to snoonet irc, it hides bots ip by default, has a tor onion

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -5,7 +5,7 @@ network = testnet
 bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
-host = chat.freenode.net
+host = irc.snoonet.org
 channel = joinmarket-pit-test
 port = 6697
 usessl = true
