implemented the idea that the testnet channel is main channel + -test

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -6,7 +6,7 @@ bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
 host = irc.snoonet.org
-channel = joinmarket-pit-test
+channel = joinmarket-pit
 port = 6697
 usessl = true
 #More stuff to come
