added link to the wiki in the joinmarket.cfg

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -1,6 +1,7 @@
 [BLOCKCHAIN]
 blockchain_source = blockr
 #options: blockr, json-rpc, regtest 
+#before using json-rpc read https://github.com/chris-belcher/joinmarket/wiki/Running-JoinMarket-with-Bitcoin-Core-full-node 
 network = testnet
 bitcoin_cli_cmd = bitcoin-cli
 
