removed the word seed from documentation of wallet-tool because thats only used for testnet

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -2,7 +2,7 @@
 blockchain_source = blockr
 #options: blockr, json-rpc, regtest 
 #before using json-rpc read https://github.com/chris-belcher/joinmarket/wiki/Running-JoinMarket-with-Bitcoin-Core-full-node 
-network = testnet
+network = mainnet
 bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
