Implemented socks5 proxy

--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -10,4 +10,7 @@ host = irc.snoonet.org
 channel = joinmarket-pit
 port = 6697
 usessl = true
+socks5 = true
+socks5_host = 127.0.0.1
+socks5_port = 1500
 #More stuff to come
