--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -10,7 +10,6 @@ host = irc.snoonet.org
 channel = joinmarket-pit
 port = 6697
 usessl = true
-socks5 = true
+socks5 = false
 socks5_host = 127.0.0.1
-socks5_port = 1500
-#More stuff to come
+socks5_port = 9150
