--- a/joinmarket.cfg
+++ b/joinmarket.cfg
@@ -6,7 +6,7 @@ network = mainnet
 bitcoin_cli_cmd = bitcoin-cli
 
 [MESSAGING]
-host = irc.snoonet.org
+host = irc.freenode.net
 channel = joinmarket-pit
 port = 6697
 usessl = true
