added comment in regtest_joinmarket.cfg to reduce confusion

--- a/test/regtest_joinmarket.cfg
+++ b/test/regtest_joinmarket.cfg
@@ -1,3 +1,5 @@
+#NOTE: This configuration file is for testing with regtest only
+#For mainnet usage, running a JoinMarket script will create the default file
 [BLOCKCHAIN]
 blockchain_source = regtest
 network = testnet
