add rpc_options to regtest_joinmarket.cfg

--- a/test/regtest_joinmarket.cfg
+++ b/test/regtest_joinmarket.cfg
@@ -2,6 +2,10 @@
 #For mainnet usage, running a JoinMarket script will create the default file
 [BLOCKCHAIN]
 blockchain_source = regtest
+rpc_host = localhost
+rpc_port = 18332
+rpc_user = bitcoinrpc
+rpc_password = 123456abcdef
 network = testnet
 bitcoin_cli_cmd = bitcoin-cli
 notify_port = 62612
